# Openstaller

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
docs/: ABI.md  ARCHITECTURE.md  ROADMAP.md
examples/: LICENSE.sample.txt
examples/sample_payload/: hello.txt
include/openstaller/: openstaller.h
scripts/: build-unix.sh  build-windows.bat  capture-readme-screenshots.ps1
src/asm/: openstaller_hash_fallback.c  openstaller_hash_x86_64.S  openstaller_hash_x86_64_msvc.asm
src/cli/: main.c
src/core/: openstaller.c  openstaller_config.c  openstaller_icon.c  openstaller_icon.h  openstaller_icon_internal.h  openstaller_icon_resource.c  openstaller_install.c  openstaller_install_fs.c  openstaller_install_internal.h  openstaller_install_registration.c  openstaller_manifest.c  openstaller_manifest.h  openstaller_online.c  openstaller_online.h  openstaller_pack.c  openstaller_pack.h  openstaller_pack_compress.c  openstaller_pack_compress.h  openstaller_platform.c  openstaller_platform.h  openstaller_rollback.c  openstaller_rollback.h  openstaller_scripts.c  openstaller_scripts.h  openstaller_scripts_internal.h  openstaller_scripts_unix.c  openstaller_scripts_windows.c  openstaller_version.c  openstaller_version.h
src/gui/: win32_builder.h  win32_builder_controls.c  win32_builder_main.c  win32_builder_pages.c  win32_builder_preview.c
src/runtime/: win32_runtime.h  win32_runtime_controls.c  win32_runtime_elevation.c  win32_runtime_images.c  win32_runtime_legacy.c  win32_runtime_main.c  win32_runtime_modern.c  win32_runtime_pages.c  win32_runtime_util.c
src/win32/: openstaller_builder.rc  openstaller_runtime.rc  win32_i18n.c  win32_i18n.h
tests/: test_core.c  test_embedded_package.c  test_rollback.c  test_unix_scripts.c
